--- a/package.json
+++ b/package.json
@@ -97,22 +97,31 @@
     },
     "homepage": "https://github.com/JhonnyJason/bot-network-ui-experiment#readme",
     "dependencies": {
-        "coffeescript": "^2.7.0",
-        "livescript": "^1.6.0",
-        "npm-check-updates": "^16.6.3",
-        "npm-run-all": "^4.1.5",
-        "thingy-allmodules-sync": "^0.2.0",
-        "thingy-module-gen": "^0.1.6",
-        "thingymodulecreate": "^0.1.8",
-        "thingysync": "^0.1.2",
-        "thingy-debug": "^0.0.1",
         "browser-sync": "^2.27.11",
         "clean-css-cli": "^5.6.2",
+        "coffeescript": "^2.7.0",
         "html-minifier": "^4.0.0",
         "implicit-dom-connect": "^0.2.3",
+        "livescript": "^1.6.0",
+        "mustache": "^4.2.0",
+        "npm-check-updates": "^16.6.3",
+        "npm-run-all": "^4.1.5",
         "pug-cli": "^1.0.0-alpha6",
         "purgecss": "^5.0.0",
+        "qr-scanner": "^1.4.2",
+        "secret-manager-client": "^0.0.6",
+        "secret-manager-crypto-utils": "^0.2.0",
         "stylus": "^0.59.0",
+        "thingy-allmodules-sync": "^0.2.0",
+        "thingy-byte-utils": "^0.0.7",
+        "thingy-debug": "^0.0.1",
+        "thingy-module-gen": "^0.1.6",
+        "thingy-network-base": "^0.0.4",
+        "thingy-session-utils": "^0.0.3",
+        "thingymodulecreate": "^0.1.8",
+        "thingysync": "^0.1.2",
+        "validatabletimestamp": "^0.0.1",
+        "vanillaqr": "^1.0.0",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
     }
