--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "scripts": {
         "build-coffee": "coffee -o toolset/build/js/ -c sources/source/*/*.coffee",
         "watch-coffee": "coffee -o toolset/build/js/ -cw sources/source/*/*.coffee",
-        "build-live": "lsc -o toolset/build/js/ -c sources/source/*/*.ls",
-        "watch-live": "lsc -o toolset/build/js/ -cw sources/source/*/*.ls",
+        "build-live": "echo 0",
+        "watch-live": "echo 0",
         "link-all-js-and-json": "toolset/thingy-build-system/link-all-js-and-json.js",
         "ncu-update": "ncu -u",
-        "reinstall": "npm install",
+        "reinstall": "pnpm install",
         "update-packages": "run-s -ns ncu-update reinstall",
         "module-gen": "thingy-module-gen --",
         "sync-allmodules": "thingy-allmodules-sync",
@@ -22,7 +22,7 @@
         "sourcemodule-to-dir": "run-s \"sourcemodulecreate directory,{1}\" --",
         "push": "thingysync push --message",
         "pull": "thingysync pull",
-        "postinstall": "npm run initialize-thingy",
+        "postinstall": "pnpm run initialize-thingy",
         "initialize-thingy": "run-s -ns create-build-directories cert-setup patch-stuff inject-scripts prepare-for-test",
         "test": "run-s -ns inject-scripts prepare-for-test watch-for-test",
         "prepare-for-test": "run-s -ns connect-dom create-dev-bundles create-build-heads build-style link-for-test build-pug dev-linkage",
@@ -96,34 +96,38 @@
     },
     "homepage": "https://github.com/JhonnyJason/bot-network-ui-experiment#readme",
     "dependencies": {
+        "browser-sync": "^3.0.3",
+        "clean-css-cli": "^5.6.3",
         "coffeescript": "^2.7.0",
-        "livescript": "^1.6.0",
-        "npm-check-updates": "^16.10.7",
-        "npm-run-all": "^4.1.5",
-        "thingy-allmodules-sync": "^0.2.0",
-        "thingy-module-gen": "^0.1.6",
-        "thingymodulecreate": "^0.1.8",
-        "thingysync": "^0.1.2",
-        "thingy-debug": "^0.0.1",
-        "browser-sync": "^2.29.1",
-        "clean-css-cli": "^5.6.2",
         "html-minifier": "^4.0.0",
         "implicit-dom-connect": "^0.2.3",
-        "pug-cli": "^1.0.0-alpha6",
-        "purgecss": "^5.0.0",
-        "stylus": "^0.59.0",
-        "webpack": "^5.78.0",
-        "webpack-cli": "^5.0.1",
+        "livescript": "^1.6.0",
         "mustache": "^4.2.0",
+        "navhandler": "^0.0.4",
+        "npm-check-updates": "^17.1.11",
+        "npm-run-all": "^4.1.5",
+        "pug-cli": "^1.0.0-alpha6",
+        "purgecss": "^6.0.0",
+        "qr-scanner": "^1.4.2",
         "secret-manager-client": "^0.0.6",
         "secret-manager-crypto-utils": "^0.3.0",
-        "vanillaqr": "^1.0.0",
-        "qr-scanner": "^1.4.2",
-        "thingy-network-base": "^0.0.4",
+        "stylus": "^0.64.0",
+        "thingy-allmodules-sync": "^0.2.0",
         "thingy-byte-utils": "^0.0.8",
-        "thingy-post-rpc-client": "^0.0.2",
-        "thingy-rpc-authmaster-client": "^0.0.4",
+        "thingy-crypto-node": "^0.0.1",
+        "thingy-debug": "^0.0.1",
+        "thingy-module-gen": "^0.1.6",
+        "thingy-network-base": "^0.0.4",
+        "thingy-post-rpc-client": "^0.0.6",
+        "thingy-rpc-authmaster-client": "^0.0.9",
         "thingy-session-utils": "^0.0.5",
-        "validatabletimestamp": "^0.0.1"
-    }
+        "thingymodulecreate": "^0.1.8",
+        "thingysync": "^0.1.2",
+        "validatabletimestamp": "^0.0.1",
+        "vanillaqr": "^1.0.0",
+        "webpack": "^5.96.1",
+        "webpack-cli": "^5.1.4"
+    },
+    "thingytype": "pwa",
+    "lang": "en"
 }
