--- a/package.json
+++ b/package.json
@@ -96,37 +96,37 @@
     },
     "homepage": "https://github.com/JhonnyJason/bot-network-ui-experiment#readme",
     "dependencies": {
-        "browser-sync": "^3.0.3",
-        "clean-css-cli": "^5.6.3",
         "coffeescript": "^2.7.0",
-        "html-minifier": "^4.0.0",
-        "implicit-dom-connect": "^0.2.3",
         "livescript": "^1.6.0",
-        "mustache": "^4.2.0",
-        "navhandler": "^0.0.4",
         "npm-check-updates": "^17.1.11",
         "npm-run-all": "^4.1.5",
+        "thingy-allmodules-sync": "^0.2.0",
+        "thingy-module-gen": "^0.1.6",
+        "thingymodulecreate": "^0.1.8",
+        "thingysync": "^0.1.2",
+        "thingy-debug": "^0.0.1",
+        "browser-sync": "^3.0.3",
+        "clean-css-cli": "^5.6.3",
+        "html-minifier": "^4.0.0",
+        "implicit-dom-connect": "^0.2.3",
         "pug-cli": "^1.0.0-alpha6",
-        "purgecss": "^6.0.0",
-        "qr-scanner": "^1.4.2",
+        "purgecss": "^7.0.2",
+        "stylus": "^0.64.0",
+        "webpack": "^5.96.1",
+        "webpack-cli": "^5.1.4",
+        "navhandler": "^0.0.4",
+        "mustache": "^4.2.0",
         "secret-manager-client": "^0.0.6",
         "secret-manager-crypto-utils": "^0.3.0",
-        "stylus": "^0.64.0",
-        "thingy-allmodules-sync": "^0.2.0",
-        "thingy-byte-utils": "^0.0.8",
+        "vanillaqr": "^1.0.0",
+        "qr-scanner": "^1.4.2",
         "thingy-crypto-node": "^0.0.1",
-        "thingy-debug": "^0.0.1",
-        "thingy-module-gen": "^0.1.6",
         "thingy-network-base": "^0.0.4",
+        "thingy-byte-utils": "^0.0.8",
         "thingy-post-rpc-client": "^0.0.6",
         "thingy-rpc-authmaster-client": "^0.0.9",
         "thingy-session-utils": "^0.0.5",
-        "thingymodulecreate": "^0.1.8",
-        "thingysync": "^0.1.2",
-        "validatabletimestamp": "^0.0.1",
-        "vanillaqr": "^1.0.0",
-        "webpack": "^5.96.1",
-        "webpack-cli": "^5.1.4"
+        "validatabletimestamp": "^0.0.1"
     },
     "thingytype": "pwa",
     "lang": "en"
